<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickCurrency</string>
    <string name="title_coin_detail">Coin Detail</string>
    <string name="title_widget_config">QuickCurrency Widget</string>


    <string name="action_help">Help</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>

    <string name="help_list">Items in this list represent what will be displayed on the watch. Changes made here will be in effect the next time you open the app on your watch</string>
    <string name="help_add">Add a new item by clicking the add button and selecting which currencies to exchange</string>
    <string name="help_remove">Remove an item from the list by clicking on it then clicking the delete button</string>
    <string name="help_exchanges">Select the exchanges you want shown by clicking on an item then using the checkboxes to select exchanges</string>
    <string name="help_order">Items will appear in the same row on the watch as they do in this list. You can change the order by clicking and dragging them in this list</string>

    <string name="widget_refresh_description">Note that this refresh rate applies to all widgets. Minimum is 5 minutes but it\'s recommended to not use a value below 30 minutes as this may cause high battery drain. You can also refresh a widget by tapping it</string>

</resources>